# kukkilan-biljardi-backend

./: .env  .env.template  .env.test  .gitignore  Cargo.toml  TODO.md  docker-compose.yml
migrations/: 20250821130000_calendars.down.sql  20250821130000_calendars.up.sql  20250821130100_bookings.up.sql  20250821130200_init_site_content.down.sql  20250821130200_init_site_content.up.sql  20250926180000_add_calendar_pricing.down.sql  20250926180000_add_calendar_pricing.up.sql  20250926200000_admin_users.down.sql  20250926200000_admin_users.up.sql  bookings.sql  calendars.sql  contact_info.sql  notices.sql  opening_hours.sql
src/: config.rs  error.rs  main.rs  response.rs  state.rs
src/features/: mod.rs
src/features/auth/: data_transfer_objects.rs  middleware.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
src/features/bookings/: data_transfer_objects.rs  model.rs  repository.rs  routes.rs  service.rs
src/features/calendars/: data_transfer_objects.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
src/features/contact_info/: data_transfer_objects.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
src/features/email/: mod.rs  model.rs  service.rs  templates.rs
src/features/encryption/: mod.rs  service.rs
src/features/media/: data_transfer_objects.rs  model.rs  repository.rs  routes.rs  service.rs
src/features/notices/: data_transfer_objects.rs  model.rs  repository.rs  routes.rs  service.rs
src/features/opening_hours/: data_transfer_objects.rs  model.rs  repository.rs  routes.rs  service.rs
src/infrastructure/: database.rs
tests/: basic_tests.rs  booking_service_tests.rs  calendar_api_tests.rs  calendar_service_tests.rs  common.rs  common_simple.rs  integration_tests.rs  simple_basic_tests.rs  simple_booking_tests.rs  simple_calendar_tests.rs
