[package]
name = "Temp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "mysql",
    "chrono",
] }
dotenvy = "0.15.7"
chrono = { version = "0.4.41", features = ["serde"] }
tower-http = { version = "0.6.6", features = ["cors"] }
async-trait = "0.1.88"
tracing-subscriber = "0.3.19"
thiserror = "2.0.14"
