[package]
name = "Temp"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["multipart"] }
tokio = { version = "1.47.1", features = ["full"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.142"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio-rustls",
    "mysql",
    "chrono",
] }
dotenvy = "0.15.7"
chrono = { version = "0.4.41", features = ["serde"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
async-trait = "0.1.88"
tracing-subscriber = "0.3.19"
tracing = "0.1.40"
thiserror = "2.0.14"
mime_guess = "2.0.5"
uuid = { version = "1.18.1", features = ["v4"] }
image = "0.25.8"
infer = "0.19.0"
anyhow = "1.0.100"
bcrypt = "0.16.0"
jsonwebtoken = "9.3.0"
